# k4rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: slice_access.rs
examples/: k4rust_ipc.rs  k4rust_shlib.rs
src/: k.h  lib.rs
tests/: ipc_live_test.rs  k4rust_unit_tests.rs  null_test.rs  run_tests.q  stress_test.rs  test.q  test.rs
tests/ffi/: k4rust_test_ffi.rs
tests/ui/: return_borrow_fail.rs  return_borrow_fail.stderr
