[package]
name = "k4rust"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]

[workspace]
members = ["."]

[[example]]
name = "k4rust_shlib"
crate-type = ["cdylib"]
path = "examples/k4rust_shlib.rs"

[[example]]
name = "k4rust_test_ffi"
crate-type = ["cdylib"]
path = "tests/ffi/k4rust_test_ffi.rs"

[[example]]
name = "k4rust_ipc"
path = "examples/k4rust_ipc.rs"

